--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^7.11.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-hook-form": "^5.1.1",
     "react-scripts": "3.4.0"
   },
   "scripts": {
